2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (vpn_helpers_save_secret): helper to save VPN secrets
		- (nm_gconf_0_6_vpnc_settings): try to convert NM-vpnc 0.6 secrets

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (get_06_keyring_secret): get an NM 0.6 secret from the keyring
		- (nm_gconf_read_0_6_wep_settings, nm_gconf_read_0_6_wpa_settings,
		   nm_gconf_read_0_6_eap_settings, nm_gconf_read_0_6_leap_settings,
		   nm_gconf_read_0_6_wireless_connection): attempt to convert NM 0.6
			secrets to NM 0.7 format

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_get_secrets): really fix focus stealing prevention for real

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf, write_one_secret_to_keyring,
		   copy_one_setting_value_to_gconf): update for NMSettingValueIterFn
			changes	
		- (copy_one_setting_value_to_gconf): remove bits than set secrets in
			the keyring which couldn't possibly be called from here

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (string_in_list): implement locally now that nm_utils_string_in_list
			was removed from libnm-util

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_dialog_response_cb): update for nm_setting_new_from_hash()

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
	  src/applet-device-wifi.c
		- Fix up compare flag names

2008-11-19  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- (nma_gconf_connection_changed): handle error returned from
			nm_connection_replace_settings()

2008-11-18  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new, revalidate): don't validate here, since the