@@ -1,3 +1,8 @@
+2008-11-21  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dialogs.c
+		- (ip4_address_as_string): use inet_ntop() instead of inet_ntoa()
+
 2008-11-20  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-upgrade.c
